<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">

    <RadioGroup
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb_male"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textSize="24sp"
            android:textAlignment="textStart"
            android:gravity="start"
            android:layoutDirection="rtl"/>

        <RadioButton
            android:id="@+id/rb_female"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textSize="24sp"
            android:textAlignment="textStart"
            android:gravity="start"
            android:layoutDirection="rtl"/>

        <RadioButton
            android:id="@+id/rb_others"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/others"
            android:textSize="24sp"
            android:textAlignment="textStart"
            android:gravity="start"
            android:layoutDirection="rtl"/>
    </RadioGroup>

</LinearLayout>