<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civProfile"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/circle_image_sample" />

            <TextView
                android:id="@+id/tvProfileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_toEndOf="@+id/civProfile"
                android:layout_toRightOf="@+id/civProfile"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:text="Quoc Bao" />

            <TextView
                android:id="@+id/tvEditProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvProfileName"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@+id/civProfile"
                android:layout_toRightOf="@+id/civProfile"
                android:text="@string/view_and_edit_profile"
                android:textSize="16sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_app_color"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSettings"
                style="@style/TextViewProfileStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:drawableLeft="@drawable/ic_settings"
                android:drawableStart="@drawable/ic_settings"
                android:text="@string/settings" />

            <TextView
                android:id="@+id/tvFeedback"
                style="@style/TextViewProfileStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:drawableLeft="@drawable/ic_feedback"
                android:drawableStart="@drawable/ic_feedback"
                android:text="@string/feedback_us" />

            <TextView
                android:id="@+id/tv_about_us"
                style="@style/TextViewProfileStyle"
                android:layout_width="match_parent"
                android:drawableLeft="@drawable/ic_info_outline"
                android:drawableStart="@drawable/ic_info_outline"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:text="@string/about_us" />

            <TextView
                android:id="@+id/tvSignInSignOut"
                style="@style/TextViewProfileStyle"
                android:layout_width="match_parent"
                android:drawableLeft="@drawable/ic_account"
                android:drawableStart="@drawable/ic_account"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:text="@string/sign_in" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>